# simple-app

./: CMakeLists.txt  main.c  token
lab04/zadatak1/: program  program.c
lab04/zadatak2/: bmp.c  e_bitmap.c  imageProcessing.c  imageProcessing.h  program
source/: CMakeLists.txt  Makefile  app  example.cpp  imageProcessing.c  imageProcessing.h  main_bitmap.c  main_source.c  stubs_bmp.c
test/: CMakeLists.txt  example.h  example_add.cpp  imageProcessing.c  imageProcessing.h  stubs_bmp.c
tests/src/: bmp.c  example.h
tests/test/: CMakeLists.txt  example_add.cpp
